--- a/roleta/loja/css/styles2.css
+++ b/roleta/loja/css/styles2.css
@@ -4,12 +4,12 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
   }
-  
+
 .navbar {
     display: flex;
     justify-content: space-between; /* Garante que os itens estejam nos extremos e no centro */
     align-items: center; /* Centraliza verticalmente os itens */
-    background-color: #000000; /* Cor de fundo do navbar */
+    background-color: #ffffff; /* Cor de fundo do navbar */
     padding-bottom: 10px;
     padding-left: 10px;
 }
